--- a/cities.html
+++ b/cities.html
@@ -28,6 +28,7 @@
     <li>Mumbai   (12,478,447)</li>
     <li>Vancouver   (631,500)</li>
     <li>New York  (8,399,000)</li>
+    <li>Bangkok   (8,281,000)</li>
   </ol>
 
 </body>
