--- a/cities.html
+++ b/cities.html
@@ -23,6 +23,7 @@
 
   <ol>
 
+    <li>Halifax (00,000,003)</li>
     <li>Victoria (00,000,001)</li>
     <li>Shanghai (17,836,133)</li>
     <li>Istanbul (13,854,740)</li>
