adding seoul to list

--- a/cities.html
+++ b/cities.html
@@ -32,6 +32,7 @@
     <li>Vancouver   (631,500)</li>
     <li>New York  (8,399,000)</li>
     <li>Bangkok   (8,281,000)</li>
+    <li>Seoul   (1,999,000)</li>
   </ol>
 
 </body>
